tests/errors/cannot_store_pointer.n
Person :: struct { name str }

fn main() {
    bob := Person { name: "Bob" };
    Person p = &bob;
}
